fix layout issues on project cards

--- a/src/styles/FeedPage.scss
+++ b/src/styles/FeedPage.scss
@@ -54,6 +54,34 @@
   gap: $component-margin * 2;
 }
 
+.card--collab {
+  width: 100%;
+  // margin: $component-margin auto;
+  display: flex;
+  // align-items: center;
+  // border: lightgrey 1px solid;
+  box-shadow: 2px 2px 10px 1px rgba(150, 150, 150, 0.1);
+  border-radius: 8px;
+  min-height: 150px;
+  overflow: hidden;
+  background-color: $white-background-color;
+  transition: transform 0.3s ease-out;
+  &__body--collab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    padding: $component-margin/2 0;
+  }
+  &__aside--collab {
+    min-width: 33%;
+    margin-right: 12px;
+    // height: 100%;
+    background-position: center center;
+    background-size: cover;
+  }
+}
+
 .card {
   width: 100%;
   // margin: $component-margin auto;
@@ -158,21 +186,22 @@
   }
 }
 
-
-@media (max-width: 375px) {
-  .card {
+@media (max-width: 770px) {
+  .card--collab {
     flex-direction: column;
-    height: 250px;
-    &__body {
+    min-height: 250px;
+
+    &__body--collab {
       padding: $component-margin/2;
       justify-content: space-around;
       margin-left: $component-margin;
+      // height: 50%;
     }
 
-    &__aside {
+    &__aside--collab {
       width: 100%;
       margin-right: 12px;
-      height: 40%;
+      height: 100px;
       background-position: center center;
       background-size: cover;
     }
